WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183751
AX: embedded attachments do not work correctly with text marker APIs on macOS
https://bugs.webkit.org/show_bug.cgi?id=183751
Summary
AX: embedded attachments do not work correctly with text marker APIs on macOS
Nan Wang
Reported
2018-03-19 14:32:27 PDT
AXUnknown is returned in AXAttributedStringForTextMarkerRange and AXUIElementForTextMarker when there's an embedded attachment. <
rdar://problem/37709113
>
Attachments
patch
(3.14 KB, patch)
2018-03-19 14:56 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
patch
(3.14 KB, patch)
2018-03-19 15:21 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2018-03-19 14:56:23 PDT
Created
attachment 336076
[details]
patch
chris fleizach
Comment 2
2018-03-19 15:14:25 PDT
Comment on
attachment 336076
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=336076&action=review
> Source/WebCore/ChangeLog:8 > + In WebKit1, embeddd attachments are not working well with text marker APIs.
embedded
> Source/WebCore/ChangeLog:10 > + 1. Hittesting on an attachment object.
hit testing
Nan Wang
Comment 3
2018-03-19 15:21:31 PDT
Created
attachment 336077
[details]
patch update
WebKit Commit Bot
Comment 4
2018-03-19 18:08:57 PDT
Comment on
attachment 336077
[details]
patch Clearing flags on attachment: 336077 Committed
r229729
: <
https://trac.webkit.org/changeset/229729
>
WebKit Commit Bot
Comment 5
2018-03-19 18:08:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug